--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p {
 
 a {
   text-decoration: none;
-  color: var(--color-white);
+  color: var(--color-black);
 }
 
 ul {
@@ -79,16 +79,23 @@ ul {
   padding-left: 0px;
 }
 
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
 /* Navbar */
 #navbar {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-pink);
-  color: var(--color-white);
+  background-color: var(--color-white);
+  color: var(--color-black);
 
   align-items: center;
 }
 .navbar__logo {
+  color: var(--font-white);
   font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   padding-left: 10px;
@@ -112,4 +119,42 @@ ul {
 
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+}
+
+/* Home */
+#home {
+  background: no-repeat center/cover url("imgs/background.jpg");
+  padding: 40px;
+  text-align: center;
+}
+
+.home__avater {
+  width: 350px;
+  border-radius: 400px;
+
+  border: 1px solid var(--color-white);
+}
+.home__title,
+.home_description,
+.home__contact {
+  color: var(--color-white);
+}
+.home__contact {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-semi-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+.home__contact:hover {
+  background-color: #ff6863;
+}
+
+/* Section common */
+.section {
+  padding: 50px;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
 }
