--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@
 
   /* Size */
   --size-border-radius: 30px;
+
+  /* Annimation */
+  --annimation-duration: 300ms;
 }
 /* Typography */
 * {
@@ -157,4 +160,29 @@ button {
   text-align: center;
   max-width: 1200px;
   margin: auto;
+}
+
+.about__major {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0px;
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  margin: auto;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+.major__icon i {
+  transition: all 300ms ease-in;
+}
+
+.major__icon:hover i {
+  color: var(--color-pink);
+  transform: rotate(-30deg) scale(5);
+
 }
