--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ button {
 }
 
 .navbar__menu__item {
-  padding: 8px 12px;
   margin: 0px 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
@@ -158,6 +157,10 @@ button {
 .section {
   padding: 50px;
   text-align: center;
+  margin: auto;
+}
+
+.section__container {
   max-width: 1200px;
   margin: auto;
 }
@@ -185,4 +188,51 @@ button {
   color: var(--color-pink);
   transform: rotate(-30deg) scale(5);
 
+}
+
+/* Skills */
+
+#skils {
+  background-color: var(--color-yellow);
+}
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+}
+
+.skillset__title {
+  color: var(--color-white);
+}
+
+.skill__description {
+  display: flex;
+}
+.skillset__left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px;
+}
+.skill {
+  margin-bottom: 32px;
+}
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: grey;
+}
+.skill__value {
+  height: 3px;
+  background-color: var(--color-orange);
+}
+.skillset__right {
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-grey);
+}
+
+.tools, .etc {
+  padding: 20px;
 }
