--- a/style.css
+++ b/style.css
@@ -236,3 +236,93 @@ button {
 .tools, .etc {
   padding: 20px;
 }
+
+/* Work */
+.work__catagories {
+  margin: 40px;
+}
+.catagory__btn {
+  border: 1px solid var(--color-dark-grey);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+}
+
+.catagory__btn.active,
+.catagory__btn:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+.catagory__btn.active .catagory__count,
+.catagory__btn:hover .catagory__count {
+  opacity: 1;
+  top: 0;
+}
+
+.catagory__count {
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  line-height: 24px;
+  position: relative;
+  top: -20px;
+  left: 4px;
+  opacity: 0;
+  transition: all var(--annimation-duration);
+}
+
+.work__projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-light-grey);
+
+}
+.project__img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.project__description {
+  background-color: var(--color-black);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all var(--annimation-duration) ease-in;
+}
+.project__description h3 {
+  color: var(--color-white);
+}
+
+.project:hover .project__description {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+
+.project__description h3:after {
+  content: '';
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 250px;
+  height: 5px;
+  background-color: var(--color-dark-white);
+}
