--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 /* Global */
-
 :root {
   /* Color */
   --color-white: #ffffff;
@@ -7,6 +6,7 @@
   --color-dark-white: #bdbdbd;
   --color-pink: #fe918d;
   --color-dark-pink: #ff6863;
+  --color-black: #4d4d4d;
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
   --color-light-grey: #7c7979;
@@ -28,27 +28,48 @@
   --weight-regular: 400;
 
   /* Size */
-  --size-border-radius: 30px;
+  --size-border-radius: 4px;
 
   /* Annimation */
-  --annimation-duration: 300ms;
+  --animation-duration: 300ms;
 }
-/* Typography */
+
+/* Universal tags */
 * {
   box-sizing: border-box;
 }
+
 body {
-  margin: 0px;
-  padding: 0px;
-  cursor: default;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: var(--color-white);
+}
+
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+/* Typography */
 h1 {
   font-size: var(--font-large);
   font-weight: var(--weight-bold);
   color: var(--color-black);
   margin: 16px 0px;
-  font-family: "Nanum Gothic", sans-serif;
 }
 
 h2 {
@@ -60,97 +81,90 @@ h2 {
 
 h3 {
   font-size: var(--font-regular);
-  font-weight: var(--weight-regular);
+  font-weight: var(--font-regular);
   color: var(--color-black);
   margin: 8px 0;
 }
 
 p {
   font-size: var(--font-regular);
-  font-weight: var(--weight-regular);
+  font-weight: var(--font-regular);
   color: var(--color-black);
   margin: 4px 0;
 }
 
-a {
-  text-decoration: none;
-  color: var(--color-black);
-}
-
-ul {
-  list-style: none;
-  padding-left: 0px;
-}
-
-button {
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  outline: none;
-}
 /* Navbar */
 #navbar {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-white);
-  color: var(--color-black);
-
   align-items: center;
+  padding: 16px;
+  background-color: var(--color-pink);
 }
+
 .navbar__logo {
-  color: var(--font-white);
   font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
-  padding-left: 10px;
+  color: white;
 }
+
 .navbar__menu {
   display: flex;
-  font-size: var(--font-medium);
-  font-weight: var(--weight-semi-bold);
 }
 
 .navbar__menu__item {
-  margin: 0px 4px;
+  padding: 8px 12px;
+  margin: 0 4px;
+  color: var(--color-white);
   cursor: pointer;
-  border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item.active {
-  border: 1px solid var(--color-white);
+  border: 1px solid white;
+  border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+  border-radius: var(--size-border-radius);
+}
+
+.navbar__toggle-btn {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
 }
 
 /* Home */
 #home {
-  background: no-repeat center/cover url("imgs/background.jpg");
+  background: url('imgs/home-background.png') center/cover no-repeat;
   padding: 40px;
   text-align: center;
 }
 
-.home__avater {
-  width: 350px;
-  border-radius: 400px;
-
-  border: 1px solid var(--color-white);
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
 }
+
 .home__title,
-.home_description,
-.home__contact {
+.home__description {
   color: var(--color-white);
 }
+
 .home__contact {
+  color: var(--color-white);
   font-size: var(--font-regular);
-  font-weight: var(--weight-semi-bold);
+  font-weight: var(--weight-bold);
   margin: 24px;
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
-}
-.home__contact:hover {
-  background-color: #ff6863;
 }
 
 /* Section common */
@@ -165,66 +179,107 @@ button {
   margin: auto;
 }
 
-.about__major {
+/* About */
+.about__majors {
   display: flex;
   justify-content: space-between;
-  margin: 80px 0px;
+  margin: 80px 0;
 }
 
 .major__icon {
   width: 170px;
   height: 170px;
   line-height: 170px;
+  font-size: 70px;
   margin: auto;
+  color: var(--color-blue);
   border: 1px solid var(--color-blue);
   border-radius: 50%;
-  margin-bottom: 15px;
+  margin-bottom: 16px;
 }
+
 .major__icon i {
-  transition: all 300ms ease-in;
+  transition: all var(--animation-duration) ease;
 }
 
 .major__icon:hover i {
   color: var(--color-pink);
-  transform: rotate(-30deg) scale(5);
-
+  transform: rotate(-30deg) scale(1.1);
 }
 
-/* Skills */
+.major__title,
+.major__description {
+  color: var(--color-dark-grey);
+}
 
-#skils {
+.major__description {
+  font-size: var(--font-small);
+}
+
+.job {
+  display: flex;
+  align-items: center;
+}
+
+.job__description {
+  margin: 0 16px;
+  text-align: left;
+}
+
+.job__name,
+.job__period {
+  color: var(--color-light-grey);
+}
+
+.job__name {
+  font-size: var(--font-small);
+}
+
+.job__period {
+  font-size: var(--font-micro);
+}
+
+/* Skill */
+
+#skills {
   background-color: var(--color-yellow);
 }
+
 .skillset {
   display: flex;
   background-color: var(--color-light-grey);
   color: var(--color-light-white);
+  margin: 20px 0;
 }
 
 .skillset__title {
   color: var(--color-white);
 }
-
-.skill__description {
-  display: flex;
-}
 .skillset__left {
   flex-basis: 60%;
   background-color: var(--color-dark-grey);
-  padding: 20px;
+  padding: 20px 40px;
 }
+
 .skill {
   margin-bottom: 32px;
 }
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+}
+
 .skill__bar {
   width: 100%;
   height: 3px;
-  background-color: grey;
+  background-color: var(--color-grey);
 }
+
 .skill__value {
   height: 3px;
   background-color: var(--color-orange);
 }
+
 .skillset__right {
   flex-basis: 40%;
 }
@@ -233,45 +288,49 @@ button {
   background-color: var(--color-grey);
 }
 
-.tools, .etc {
+.tools,
+.etc {
   padding: 20px;
 }
 
 /* Work */
-.work__catagories {
+
+.work__categories {
   margin: 40px;
 }
-.catagory__btn {
-  border: 1px solid var(--color-dark-grey);
+
+.category__btn {
+  border: 1px solid var(--color-dark-white);
   border-radius: var(--size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
 }
 
-.catagory__btn.active,
-.catagory__btn:hover {
+.category__btn.active,
+.category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
 }
-.catagory__btn.active .catagory__count,
-.catagory__btn:hover .catagory__count {
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
   opacity: 1;
   top: 0;
 }
 
-.catagory__count {
+.category__count {
   background-color: var(--color-orange);
   border-radius: 50%;
   color: var(--color-white);
   width: 24px;
   height: 24px;
-  display: inline-block;
   line-height: 24px;
+  display: inline-block;
   position: relative;
   top: -20px;
   left: 4px;
   opacity: 0;
-  transition: all var(--annimation-duration);
+  transition: all var(--animation-duration) ease-in;
 }
 
 .work__projects {
@@ -288,28 +347,28 @@ button {
   width: 280px;
   height: 250px;
   margin: 2px;
-  background-color: var(--color-light-grey);
-
+  background-color: var(--color-light-white);
 }
+
 .project__img {
   max-width: 100%;
   max-height: 100%;
+  align-self: center;
 }
+
 .project__description {
-  background-color: var(--color-black);
   position: absolute;
+  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   opacity: 0;
-  transition: all var(--annimation-duration) ease-in;
-}
-.project__description h3 {
-  color: var(--color-white);
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
 }
 
 .project:hover .project__description {
@@ -317,82 +376,126 @@ button {
   transform: translateY(0px);
 }
 
+.project__description h3 {
+  color: var(--color-white);
+}
+
 .project__description h3:after {
   content: '';
   display: block;
   position: relative;
   left: 50%;
-  width: 250px;
-  height: 5px;
+  width: 25px;
+  height: 2px;
+  margin-left: -12px;
+  margin-top: 8px;
   background-color: var(--color-dark-white);
 }
 
-/* Testimonials */
+/* Testimonial */
 #testimonials {
-  background-color: var(--color-light-grey);
+  background-color: var(--color-light-white);
 }
 
 .testimonials {
-  margin: 32px;
-  padding: 0px;
+  margin: 40px;
 }
 
 .testimonial {
   display: flex;
+  margin: 32px 0;
 }
+
 .testimonial__avatar {
   width: 150px;
   height: 150px;
   border-radius: 50%;
 }
-.testimonial__avatar:nth-child(odd){
-  margin-left: 40px;
-}
-.testimonial__avatar:nth-child(even){
+
+.testimonial__avatar:nth-child(odd) {
   margin-right: 40px;
 }
+
+.testimonial__avatar:nth-child(even) {
+  margin-left: 40px;
+}
+
 .testimonial__speech-bubble {
   padding: 18px;
   background-color: var(--color-white);
   border-radius: var(--size-border-radius);
 }
-.testimonial__speech-bubble p{
+
+.testimonial__speech-bubble p {
   color: var(--color-light-grey);
 }
 
-.testimonial__speech-bubble a{
+.testimonial__speech-bubble a {
   color: var(--color-pink);
 }
 
-
 /* Contact */
-
 #contact {
   background-color: var(--color-pink);
-  position: absolute;
 }
 
-.contact__title, 
+.contact__title,
 .contact__email,
 .contact__rights {
   color: var(--color-white);
 }
 
 .contact__title {
-  margin: 32px 0 ;
+  margin: 32px 0;
 }
 
 .contact__links {
   font-size: var(--font-large);
-  margin: 24px 0 ;
+  margin: 24px 0;
+  transition: all var(--animation-duration) ease-in;
 }
 
-.contact__links i {
-  transition: all var(--annimation-duration);
-
-}
-
-.contact__list i:hover  {
+.contact__links i:hover {
   transform: scale(1.1);
-  color: var(--color-white);
+  color: var(--color-yellow);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .about__majors {
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
+
+  .testimonial__avatar {
+    width: 80px;
+    height: 80px;
+  }
 }
