--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
 }
 
@@ -107,7 +107,7 @@ p {
 }
 
 #navbar.navbar--dark {
-  background-color : var(--color-pink);
+  background-color: var(--color-pink);
   padding: 8px;
 }
 
@@ -149,7 +149,7 @@ p {
 
 /* Home */
 #home {
-  background: url('imgs/home-background.png') center/cover no-repeat;
+  background: url("imgs/home-background.png") center/cover no-repeat;
   padding: 40px;
   padding-top: 120px;
   text-align: center;
@@ -391,7 +391,7 @@ p {
 }
 
 .project__description h3:after {
-  content: '';
+  content: "";
   display: block;
   position: relative;
   left: 50%;
