--- a/style.css
+++ b/style.css
@@ -101,14 +101,14 @@ p {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  background-color: transparent;
+  background-color: var(--color-pink);
   transition: all var(--animation-duration) ease-in-out;
   z-index: 1;
 }
 
 #navbar.navbar--dark {
   background-color: var(--color-pink);
-  padding: 8px;
+  padding: 16px;
 }
 
 .navbar__logo {
@@ -121,20 +121,21 @@ p {
   display: flex;
 }
 
+.navbar__menu.open {
+  display: block;
+}
+
 .navbar__menu__item {
   padding: 8px 12px;
   margin: 0 4px;
   color: var(--color-white);
   cursor: pointer;
-}
-
-.navbar__menu__item.active {
-  border: 1px solid white;
-  border-radius: var(--size-border-radius);
+  border: 1px solid transparent;
 }
 
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+  border-color: var(--color-white);
   border-radius: var(--size-border-radius);
 }
 
@@ -316,13 +317,13 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
@@ -396,7 +397,7 @@ p {
 }
 
 .project__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project__description h3:after {
@@ -404,9 +405,10 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
   margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
